@@ -1,6 +1,7 @@
 package ru.job4j.site.controller;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,17 +9,17 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.ui.ConcurrentModel;
 import ru.job4j.site.SiteSrv;
 import ru.job4j.site.domain.Breadcrumb;
-import ru.job4j.site.dto.CategoryDTO;
-import ru.job4j.site.dto.InterviewDTO;
-import ru.job4j.site.dto.ProfileDTO;
-import ru.job4j.site.dto.TopicDTO;
+import ru.job4j.site.dto.*;
 import ru.job4j.site.service.*;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 
@@ -62,7 +63,7 @@ class IndexControllerTest {
     @BeforeEach
     void initTest() {
         this.indexController = new IndexController(
-                categoriesService, interviewsService, authService, notificationService, profilesService
+                categoriesService, interviewsService, authService, notificationService, profilesService, topicsService
         );
     }
 
@@ -84,6 +85,8 @@ class IndexControllerTest {
         topicDTO2.setName("topic2");
         var cat1 = new CategoryDTO(1, "name1");
         var cat2 = new CategoryDTO(2, "name2");
+        topicDTO1.setCategory(cat1);
+        topicDTO2.setCategory(cat1);
         var listCat = List.of(cat1, cat2);
         var firstInterview = new InterviewDTO(1, 1, 1, 1,
                 "interview1", "description1", "contact1",
@@ -92,11 +95,28 @@ class IndexControllerTest {
                 "interview2", "description2", "contact2",
                 "30.02.2024", "09.10.2023", 1);
         var listInterviews = List.of(firstInterview, secondInterview);
-        when(topicsService.getByCategory(cat1.getId())).thenReturn(List.of(topicDTO1));
-        when(topicsService.getByCategory(cat2.getId())).thenReturn(List.of(topicDTO2));
+        Page<InterviewDTO> page = new PageImpl<>(listInterviews);
+        Page<InterviewDTO> emptyPage = new PageImpl<>(Collections.emptyList());
+        Map<Integer, Integer> interviewsCount = Map.of(
+                cat1.getId(), 2,
+                cat2.getId(), 0);
+        List<TopicIdNameDTO> topicIdNameDTOList = List.of(
+                new TopicIdNameDTO(topicDTO1.getId(), topicDTO1.getName()),
+                new TopicIdNameDTO(topicDTO2.getId(), topicDTO2.getName()));
+        when(topicsService.getByCategory(cat1.getId())).thenReturn(List.of(topicDTO1, topicDTO2));
+        when(topicsService.getByCategory(cat2.getId())).thenReturn(Collections.emptyList());
         when(categoriesService.getMostPopular()).thenReturn(listCat);
         when(interviewsService.getByType(1)).thenReturn(listInterviews);
         when(profilesService.getProfileById(anyInt())).thenReturn(Optional.of(new ProfileDTO()));
+        when(categoriesService.getAll()).thenReturn(listCat);
+        when(topicsService.getById(1)).thenReturn(topicDTO1);
+        when(topicsService.getById(2)).thenReturn(topicDTO2);
+        when(topicsService.getTopicIdNameDtoByCategory(cat1.getId())).thenReturn(topicIdNameDTOList);
+        when(topicsService.getTopicIdNameDtoByCategory(cat2.getId())).thenReturn(Collections.emptyList());
+        when(interviewsService.getByTopicsIds(List.of(topicDTO1.getId(), topicDTO2.getId()), 0, 0))
+                .thenReturn(page);
+        when(interviewsService.getByTopicsIds(Collections.emptyList(), 0, 0))
+                .thenReturn(emptyPage);
         var listBread = List.of(new Breadcrumb("Главная", "/"));
         var model = new ConcurrentModel();
         var view = indexController.getIndexPage(model, null);
@@ -104,11 +124,12 @@ class IndexControllerTest {
         var actualBreadCrumbs = model.getAttribute("breadcrumbs");
         var actualUserInfo = model.getAttribute("userInfo");
         var actualInterviews = model.getAttribute("new_interviews");
-
+        Object actualInterviewsCounter = model.getAttribute("interviewsCount");
         assertThat(view).isEqualTo("index");
         assertThat(actualCategories).usingRecursiveComparison().isEqualTo(listCat);
         assertThat(actualBreadCrumbs).usingRecursiveComparison().isEqualTo(listBread);
         assertThat(actualUserInfo).isNull();
         assertThat(actualInterviews).usingRecursiveComparison().isEqualTo(listInterviews);
+        assertThat(actualInterviewsCounter).isEqualTo(interviewsCount);
     }
 }
